--- a/l-drive.html
+++ b/l-drive.html
@@ -392,93 +392,94 @@
 	</header>
 	<!-- End Header -->
 
-    <!-- Breadcrumb Area -->
+    <!-- Start Breadcrumb Area -->
     <section class="ldrive-page">
         <img src="images/solutions/ldrive/ldrive-main-banner.jpg" alt="" height="100%" width="100%" />
     </section>
+	<!-- End Breadcrumb Area -->
 
-    <section class="serviceWeOffer py-5 pt60">
+	<!-- Start Services We Offer -->
+    <section class="serviceWeOffer py-5">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-lg-10 col-md-10 col-sm-10 col-12 wow fadeInLeft">
+                <div class="col-12 col-sm-10 wow fadeInLeft">
                     <div class="common-heading">
-                        <p class="mt10">
-                            <span class="makeresponsive text-white">
-                                <span class="text-white fw-bold">AUTOLIFT:</span>
-                                With virtual 3D car tuning software, you may create your fantasy car. For dealerships, autolift is a clever and multi-functional interactive vehicle customizer with a realistic 3D car model.
-                            </span>
+                        <p class="text-white">
+							<span class="fw-bold text-white">AUTOLIFT:</span>
+							With virtual 3D car tuning software, you may create your fantasy car. For dealerships, autolift is a clever and multi-functional interactive vehicle customizer with a realistic 3D car model.
                         </p>
                     </div>
                 </div>
             </div>
-            <div class="wrapper">
-                <div class="row">
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-12">
-                        <div class="box">
-                            <div class="front-face">
-                                <div class="icon">
-                                    <i class="fa fa-rocket" aria-hidden="true"></i>
-                                </div>
-                                <span>Revolutionize conventional car sales</span>
-                            </div>
-                            <div class="back-face">
-                                <span>Revolutionize conventional car sales</span>
-                                <p>The automotive revenue pool will significantly increase and diversify toward on-demand mobility services and data-driven services.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-12">
-                        <div class="box">
-                            <div class="front-face">
-                                <div class="icon">
-                                    <i class="fa fa-thumbs-up" aria-hidden="true"></i>
-                                </div>
-                                <span>Build up stronger customer relations</span>
-                            </div>
-                            <div class="back-face">
-                                <span>Build up stronger customer relations</span>
-                                <p>This leads to better individual interactions with customers, which builds up trust over time and influences their buying decisions.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-6 col-12">
-                        <div class="box">
-                            <div class="front-face">
-                                <div class="icon">
-                                    <i class="fa fa-line-chart" aria-hidden="true"></i>
-                                </div>
-                                <span>Increase number of vehicles sold</span>
-                            </div>
-                            <div class="back-face">
-                                <span>Increase number of vehicles sold</span>
-                                <p>The global auto industry expects to sell 69.8 million automobiles in 2021, an increase of nearly 10 percent year-on-year.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div class="row py-3">
+				<div class="col-md-4">
+					<div class="drive-box">
+						<div class="front-face">
+							<div class="icon">
+								<i class="fa fa-rocket" aria-hidden="true"></i>
+							</div>
+							<span>Revolutionize conventional car sales</span>
+						</div>
+						<div class="back-face">
+							<span>Revolutionize conventional car sales</span>
+							<p>The automotive revenue pool will significantly increase and diversify toward on-demand mobility services and data-driven services.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="drive-box">
+						<div class="front-face">
+							<div class="icon">
+								<i class="fa fa-thumbs-up" aria-hidden="true"></i>
+							</div>
+							<span>Build up stronger customer relations</span>
+						</div>
+						<div class="back-face">
+							<span>Build up stronger customer relations</span>
+							<p>This leads to better individual interactions with customers, which builds up trust over time and influences their buying decisions.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="drive-box">
+						<div class="front-face">
+							<div class="icon">
+								<i class="fa fa-line-chart" aria-hidden="true"></i>
+							</div>
+							<span>Increase number of vehicles sold</span>
+						</div>
+						<div class="back-face">
+							<span>Increase number of vehicles sold</span>
+							<p>The global auto industry expects to sell 69.8 million automobiles in 2021, an increase of nearly 10 percent year-on-year.</p>
+						</div>
+					</div>
+				</div>
+			</div>
             <div class="row justify-content-md-center">
                 <div class="col-lg-10 col-md-10 col-sm-10 col-12 wow fadeInLeft">
                     <div class="common-heading">
-                        <p class="mt10 py-5">
-                            <span class="makeresponsive text-white">When a dealership manager offers to go through a large catalog of multiple color possibilities on the basis of one vehicle model and chooses extra equipment out of thin air, it feels like buying a suit without putting it on, as opposed to typical car sales.</span>
+                        <p class="py-3">
+                            <span class="text-white">When a dealership manager offers to go through a large catalog of multiple color possibilities on the basis of one vehicle model and chooses extra equipment out of thin air, it feels like buying a suit without putting it on, as opposed to typical car sales.</span>
                         </p>
                     </div>
                 </div>
-                <iframe width="100%" height="515" src="https://www.youtube.com/embed/-ElZvSlXkdg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="my-4" width="100%" height="515" src="https://www.youtube.com/embed/-ElZvSlXkdg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <div class="col-lg-10 col-md-10 col-sm-10 col-12 wow fadeInLeft">
                     <div class="common-heading">
-                        <p class="mt10 py-5">
-                            <span class="makeresponsive text-white">Sell the automobile that you don't have in stock right now and may never have. but will undoubtedly construct any potential combination of automobile body, wheels, and interior finishes according to the buyers' wants that no printed pamphlets or ready-made renderings can predict all in one spot.</span>
+                        <p class="py-3">
+                            <span class="text-white">Sell the automobile that you don't have in stock right now and may never have. but will undoubtedly construct any potential combination of automobile body, wheels, and interior finishes according to the buyers' wants that no printed pamphlets or ready-made renderings can predict all in one spot.</span>
                         </p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="py-5">
+	<!-- Start Services We Offer -->
+
+	<!-- Start Smart Touch -->
+    <section class="smart-touch py-5">
         <div class="container">
-            <div class="row py-3">
+            <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12 col-12 fadeInRight v-center">
                     <div class="card cardSmartTouchA">
                         <h1 class="headingAboutSec">AutoLift Application Features:</h1>
@@ -499,15 +500,22 @@
             </div>
         </div>
     </section>
-    <section><img src="images/solutions/ldrive/autolift-application-features-banner.jpg" alt="" height="100%" width="100%"></section>
-    <section class="serviceWeOffer">
-        <div class="container py-5">
-            <div class="row py-3">
+	<!-- End Smart Touch -->
+
+	<!-- Start L-Drive Video -->
+    <section>
+		<img src="images/solutions/ldrive/autolift-application-features-banner.jpg" alt="" height="100%" width="100%">
+	</section>
+	<!-- End L-Drive Video -->
+
+	<!-- Start Dealership -->
+    <section class="dealership py-5">
+        <div class="container">
+            <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12 col-12 fadeInRight v-center">
                     <div class="card cardSmartTouchA" style="background-color:transparent">
                         <h1 class="headingAboutSec text-white">Special Offer For Dealership:</h1>
-                        <p class="mt10 py-5">
-                            <span class="makeresponsive text-white">When a dealership manager offers to go through a large catalog of multiple color possibilities on the basis of one vehicle model and chooses extra equipment out of thin air, it feels like buying a suit without putting it on, as opposed to typical car sales.</span>
+                        <p class="pt-3 text-white">When a dealership manager offers to go through a large catalog of multiple color possibilities on the basis of one vehicle model and chooses extra equipment out of thin air, it feels like buying a suit without putting it on, as opposed to typical car sales.
                         </p>
                     </div>
                 </div>
@@ -519,7 +527,10 @@
             </div>
         </div>
     </section>
-    <section class="ftco-section img bg-hero">
+	<!-- End Dealership -->
+
+	<!-- Start Contact Info -->
+    <section class="ftco-section img bg-hero py-5">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-6 text-center mb-5">
@@ -534,25 +545,25 @@
                                     <h3 class="mb-4">Contact us</h3>
                                     <div class="dbox w-100 d-flex align-items-start">
                                         <div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-map-marker"></span></div>
-                                        <div class="text pl-4">
+                                        <div class="text ps-4">
                                             <p><span>Address:</span>Jakubovo námestie 19, 811 09 Bratislava</p>
                                         </div>
                                     </div>
                                     <div class="dbox w-100 d-flex align-items-start">
                                         <div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-phone"></span></div>
-                                        <div class="text pl-4">
+                                        <div class="text ps-4">
                                             <p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
                                         </div>
                                     </div>
                                     <div class="dbox w-100 d-flex align-items-start">
                                         <div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-paper-plane"></span></div>
-                                        <div class="text pl-4">
+                                        <div class="text ps-4">
                                             <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
                                         </div>
                                     </div>
                                     <div class="dbox w-100 d-flex align-items-start">
                                         <div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-globe"></span></div>
-                                        <div class="text pl-4">
+                                        <div class="text ps-4">
                                             <p><span>Website</span> <a href="https://www.futurealiti.com/">futurealiti.com</a></p>
                                         </div>
                                     </div>
@@ -601,6 +612,7 @@
             </div>
         </div>
     </section>
+	<!-- End Contact Info -->
 
 	<!-- Start Footer -->
 	<footer>
