--- a/game-development.html
+++ b/game-development.html
@@ -613,6 +613,15 @@
 						</div>
 					</div>
 				</div>
+
+				<div class="col-12 text-center mt-3">
+					<a class="btn mb-3 mr-1" href="#game-app-services" role="button" data-bs-slide="prev">
+						<i class="fa fa-arrow-left"></i>
+					</a>
+					<a class="btn mb-3" href="#game-app-services" role="button" data-bs-slide="next">
+						<i class="fa fa-arrow-right"></i>
+					</a>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -624,7 +633,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8 my-auto wow fadeInLeft">
                     <div class="common-heading text-l">
-                        <h2 class="common-heading mb10 text-center">Ascendancy the power of gaming world</h2>
+                        <h2 class="common-heading mb10 text-center text-white">Ascendancy the power of gaming world</h2>
                     </div>
                 </div>
 			</div>
@@ -635,7 +644,7 @@
 							<a class="nav-link active" data-bs-toggle="tab" href="#twod">
 								<div class="card">
 									<div class="card-body">
-										<h5 class="mb-0 service-name">2d Art</h5>
+										<h5 class="mb-0 service-name text-white">2d Art</h5>
 										<img src="images/services/game-development/2d-art-icon.webp" class="service-icon">
 									</div>
 								</div>
@@ -645,7 +654,7 @@
 							<a class="nav-link" data-bs-toggle="tab" href="#environment">
 								<div class="card">
 									<div class="card-body">
-										<h5 class="mb-0 service-name">Environment Design</h5>
+										<h5 class="mb-0 service-name text-white">Environment Design</h5>
 										<img src="images/services/game-development/environment-design-icon.webp" class="service-icon">
 									</div>
 								</div>
@@ -655,7 +664,7 @@
 							<a class="nav-link" data-bs-toggle="tab" href="#threed">
 								<div class="card">
 									<div class="card-body">
-										<h5 class="mb-0 service-name">3d Art</h5>
+										<h5 class="mb-0 service-name text-white">3d Art</h5>
 										<img src="images/services/game-development/3d-art-icon.webp" class="service-icon">
 									</div>
 								</div>
@@ -665,7 +674,7 @@
 							<a class="nav-link" data-bs-toggle="tab" href="#character">
 								<div class="card">
 									<div class="card-body">
-										<h5 class="mb-0 service-name">Character Design</h5>
+										<h5 class="mb-0 service-name text-white">Character Design</h5>
 										<img src="images/services/game-development/character-design-icon.webp" class="service-icon">
 									</div>
 								</div>
@@ -708,7 +717,7 @@
 							<a class="nav-link" data-bs-toggle="tab" href="#animation">
 								<div class="card">
 									<div class="card-body">
-										<h5 class="mb-0 service-name">Animation</h5>
+										<h5 class="mb-0 service-name text-white">Animation</h5>
 										<img src="images/services/game-development/animation-icon.webp" class="service-icon">
 									</div>
 								</div>
@@ -718,7 +727,7 @@
 							<a class="nav-link" data-bs-toggle="tab" href="#causal">
 								<div class="card">
 									<div class="card-body">
-										<h5 class="mb-0 service-name">Causal Art</h5>
+										<h5 class="mb-0 service-name text-white">Causal Art</h5>
 										<img src="images/services/game-development/causal-art-icon.webp" class="service-icon">
 									</div>
 								</div>
@@ -728,7 +737,7 @@
 							<a class="nav-link" data-bs-toggle="tab" href="#concept">
 								<div class="card">
 									<div class="card-body">
-										<h5 class="mb-0 service-name">Concept Art</h5>
+										<h5 class="mb-0 service-name text-white">Concept Art</h5>
 										<img src="images/services/game-development/concept-art-icon.webp" class="service-icon">
 									</div>
 								</div>
@@ -738,7 +747,7 @@
 							<a class="nav-link" data-bs-toggle="tab" href="#gamedev">
 								<div class="card">
 									<div class="card-body">
-										<h5 class="mb-0 service-name">Game Development</h5>
+										<h5 class="mb-0 service-name text-white">Game Development</h5>
 										<img src="images/services/game-development/game-development-icon.webp" class="service-icon">
 									</div>
 								</div>
