--- a/index.html
+++ b/index.html
@@ -138,6 +138,13 @@
 													<li><a href="animation-services.html">Animation Services</a></li>
 												</ul>
 											</div>
+											<div class="sub-menu-column">
+												<ul>
+													<li><a href="augmented-reality-development.html">3D Exterior Rendering Service</a></li>
+													<li><a href="mobile-app-development.html">3D Interior Rendering Service</a></li>
+													<li><a href="animation-services.html">2D 3D Floor Plan Service</a></li>
+												</ul>
+											</div>
 										</div>
 									</div>
 								</div>
@@ -148,8 +155,8 @@
 								<div class="sub-menu-section">
 									<div class="container">
 										<div class="sub-menu-center-block">
-										<div class="sub-menu-column">
-											<ul class="mainmenu">
+											<div class="sub-menu-column">
+												<ul>
 													<li><a href="#">Mobile Apps Development</a>
 														<ul class="submenu">
 															<li><a href="booking-app.html">Booking App</a></li>
@@ -163,70 +170,39 @@
 															<li><a href="sport-app.html">Sport App</a></li>
 														</ul>
 													</li>
-													<!-- <li><a href="#">Game Development</a>
-														<ul class="submenu">
-															<li><a href="#">Game</a></li>
-															<li><a href="#">Game</a></li>
-														</ul>
-													</li>
-													<li><a href="#">Metaverse Development</a>
-														<ul class="submenu">
-															<li><a href="#">Metaverse</a></li>
-															<li><a href="#">Metaverse</a></li>
-														</ul>
-													</li>
-													<li><a href="#">Website Development</a>
-														<ul class="submenu">
-															<li><a href="#">Website</a></li>
-															<li><a href="#">Website</a></li>
-														</ul>
-													</li> -->
 												</ul>
 											</div>
-											<!-- <div class="sub-menu-column">
+											<div class="sub-menu-column">
 												<ul>
-													<li><a href="#">Virtual Reality Development</a>
+													<li><a href="#">Interactive Touch Screen</a>
 														<ul class="submenu">
-															<li><a href="#">Virtual Reality</a></li>
-															<li><a href="#">Virtual Reality</a></li>
-														</ul>
-													</li>
-													<li><a href="#">Mixed Reality Development</a>
-														<ul class="submenu">
-															<li><a href="#">Mixed Reality</a></li>
-															<li><a href="#">Mixed Reality</a></li>
-														</ul>
-													</li>
-													<li><a href="#">2D & 3D Design Services</a>
-														<ul class="submenu">
-															<li><a href="#">2D & 3D Design</a></li>
-															<li><a href="#">2D & 3D Design</a></li>
+															<li><a href="smart-drive.html">Smart Drive</a></li>
+															<li><a href="smart-touch.html">Smart Touch</a></li>
+															<li><a href="smart-touch.html">Smart Room</a></li>
 														</ul>
 													</li>
 												</ul>
-											</div> -->
-											<!-- <div class="sub-menu-column">
-												<ul>
-													<li><a href="#">Augmented Reality Development</a>
+											</div>
+											<div class="sub-menu-column">
+												<ul>	
+													<li><a href="#">Virtual Reality</a>
 														<ul class="submenu">
-															<li><a href="#">Augmented Reality</a></li>
-															<li><a href="#">Augmented Reality</a></li>
-														</ul>
-													</li>
-													<li><a href="#">Industrial Automation</a>
-														<ul class="submenu">
-															<li><a href="#">Industrial Automation</a></li>
-															<li><a href="#">Industrial Automation</a></li>
-														</ul>
-													</li>
-													<li><a href="#">Animation Services</a>
-														<ul class="submenu">
-															<li><a href="#">Animation Services</a></li>
-															<li><a href="#">Animation Services</a></li>
+															<li><a href="#">Real Estate Solution</a></li>
+															<li><a href="#">Metaverse</a></li>
 														</ul>
 													</li>
 												</ul>
-											</div> -->
+											</div>
+											<div class="sub-menu-column">
+												<ul>	
+													<li><a href="#">Augumented Reality</a>
+														<ul class="submenu">
+															<li><a href="#">Website</a></li>
+															<li><a href="#">Website</a></li>
+														</ul>
+													</li>
+												</ul>
+											</div>
 										</div>
 									</div>
 								</div>
@@ -315,60 +291,25 @@
 									<li><a href="sport-app.html">Sport App</a></li>
 								</ul>
 							</li>
-							<!-- <li><a href="#">Game Development</a>
+							<li><a href="#">Interactive Touch Screen</a>
 								<ul class="submenu">
-									<li><a href="#">Game</a></li>
-									<li><a href="#">Game</a></li>
+									<li><a href="smart-drive.html">Smart Drive</a></li>
+									<li><a href="smart-touch.html">Smart Touch</a></li>
+									<li><a href="smart-touch.html">Smart Room</a></li>
+								</ul>
+							</li>	
+							<li><a href="#">Virtual Reality</a>
+								<ul class="submenu">
+									<li><a href="#">Real Estate Solution</a></li>
+									<li><a href="#">Metaverse</a></li>
 								</ul>
 							</li>
-							<li><a href="#">Metaverse Development</a>
-								<ul class="submenu">
-									<li><a href="#">Metaverse</a></li>
-									<li><a href="#">Metaverse</a></li>
-								</ul>
-							</li>
-							<li><a href="#">Website Development</a>
+							<li><a href="#">Augumented Reality</a>
 								<ul class="submenu">
 									<li><a href="#">Website</a></li>
 									<li><a href="#">Website</a></li>
 								</ul>
 							</li>
-							<li><a href="#">2D & 3D Design Services</a>
-								<ul class="submenu">
-									<li><a href="#">2D & 3D Design</a></li>
-									<li><a href="#">2D & 3D Design</a></li>
-								</ul>
-							</li>
-							<li><a href="#">Virtual Reality Development</a>
-								<ul class="submenu">
-									<li><a href="#">Virtual Reality</a></li>
-									<li><a href="#">Virtual Reality</a></li>
-								</ul>
-							</li>
-							<li><a href="#">Mixed Reality Development</a>
-								<ul class="submenu">
-									<li><a href="#">Mixed Reality</a></li>
-									<li><a href="#">Mixed Reality</a></li>
-								</ul>
-							</li>
-							<li><a href="#">Industrial Automation</a>
-								<ul class="submenu">
-									<li><a href="#">Industrial Automation</a></li>
-									<li><a href="#">Industrial Automation</a></li>
-								</ul>
-							</li>
-							<li><a href="#">Augmented Reality Development</a>
-								<ul class="submenu">
-									<li><a href="#">Augmented Reality</a></li>
-									<li><a href="#">Augmented Reality</a></li>
-								</ul>
-							</li>
-							<li><a href="#">Animation Services</a>
-								<ul class="submenu">
-									<li><a href="#">Animation Services</a></li>
-									<li><a href="#">Animation Services</a></li>
-								</ul>
-							</li> -->
 						</ul>
 					</li>
 					<li><a href="portfolio.html">Portoflio</a></li>
