--- a/smart-drive.html
+++ b/smart-drive.html
@@ -394,12 +394,12 @@
 
     <!-- Start Breadcrumb Area -->
     <section class="ldrive-page">
-        <img src="images/solutions/ldrive/ldrive-main-banner.jpg" alt="" height="100%" width="100%" />
+        <img src="images/solutions/smart-drive/ldrive-main-banner.jpg" alt="" height="100%" width="100%" />
     </section>
 	<!-- End Breadcrumb Area -->
 
 	<!-- Start Services We Offer -->
-    <section class="serviceWeOffer py-5">
+    <section class="serviceWeOffer py-3 py-md-3 py-lg-5">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-sm-10 wow fadeInLeft">
@@ -477,7 +477,7 @@
 	<!-- Start Services We Offer -->
 
 	<!-- Start Smart Touch -->
-    <section class="smart-touch py-5">
+    <section class="smart-touch py-3 py-md-3 py-lg-5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12 col-12 fadeInRight v-center">
@@ -495,7 +495,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 col-12 v-center fadeInLeft">
-                    <div class="card cardSmartTouchA"><img src="images/solutions/ldrive/autolift-application-features.jpg" alt="" height="100%" width="100%"></div>
+                    <div class="card cardSmartTouchA"><img src="images/solutions/smart-drive/autolift-application-features.jpg" alt="" height="100%" width="100%"></div>
                 </div>
             </div>
         </div>
@@ -504,12 +504,12 @@
 
 	<!-- Start L-Drive Video -->
     <section>
-		<img src="images/solutions/ldrive/autolift-application-features-banner.jpg" alt="" height="100%" width="100%">
+		<img src="images/solutions/smart-drive/autolift-application-features-banner.jpg" alt="" height="100%" width="100%">
 	</section>
 	<!-- End L-Drive Video -->
 
 	<!-- Start Dealership -->
-    <section class="dealership py-5">
+    <section class="dealership py-3 py-md-3 py-lg-5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12 col-12 fadeInRight v-center">
@@ -521,7 +521,7 @@
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 col-12 v-center fadeInLeft">
                     <div class="card cardSmartTouchA" style="background-color:transparent">
-                        <img src="images/solutions/ldrive/special-offers.jpg" alt="" height="100%" width="100%">
+                        <img src="images/solutions/smart-drive/special-offers.jpg" alt="" height="100%" width="100%">
                     </div>
                 </div>
             </div>
@@ -530,7 +530,7 @@
 	<!-- End Dealership -->
 
 	<!-- Start Contact Info -->
-    <section class="ftco-section img bg-hero py-5">
+    <section class="ftco-section img bg-hero py-3 py-md-3 py-lg-5">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-6 text-center mb-5">
